fix: Fix cut off names on small screens

--- a/frontend/src/components/CastawayCard/CastawayCard.css
+++ b/frontend/src/components/CastawayCard/CastawayCard.css
@@ -16,6 +16,11 @@
     overflow: hidden;
 }
 
+.card-nameplate h2 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .tribe-circle-container {
     position: absolute;
     top: 0;
