--- a/frontend/src/components/TribeBoard/TribeBoard.css
+++ b/frontend/src/components/TribeBoard/TribeBoard.css
@@ -102,5 +102,9 @@
     max-width: var(--castaway-card-size-sm);
     max-height: var(--castaway-card-size-sm);
   }
+
+  .tribe .castaway-card h2 {
+    font-size: 1.3rem;
+  }
 }
   
